--- a/caldav.ipynb
+++ b/caldav.ipynb
@@ -361,7 +361,23 @@
    "id": "86fbe0d6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import spacy\n",
+    "\n",
+    "# Load the Greek language model\n",
+    "nlp = spacy.load(\"el_core_news_sm\")\n",
+    "\n",
+    "# Sample text\n",
+    "text = \"Lap εξαρτηματεκτομή Κορφιάτη\"\n",
+    "\n",
+    "# Process the text\n",
+    "doc = nlp(text)\n",
+    "\n",
+    "# Extract potential names\n",
+    "names = [ent.text for ent in doc.ents if ent.label_ == 'PER']\n",
+    "\n",
+    "print(names)\n"
+   ]
   }
  ],
  "metadata": {
