--- a/fetusapp/rag.ipynb
+++ b/fetusapp/rag.ipynb
@@ -46,6 +46,63 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'alembic_version': ['version_num'],\n",
+       " 'users': ['id',\n",
+       "  'username',\n",
+       "  'password_hash',\n",
+       "  'first_name',\n",
+       "  'last_name',\n",
+       "  'is_active',\n",
+       "  'is_admin',\n",
+       "  'created_on',\n",
+       "  'last_updated_on'],\n",
+       " 'patients': ['id',\n",
+       "  'created_by',\n",
+       "  'last_updated_by',\n",
+       "  'created_on',\n",
+       "  'last_updated_on',\n",
+       "  'first_name',\n",
+       "  'last_name',\n",
+       "  'father_name',\n",
+       "  'date_of_birth',\n",
+       "  'marital_status',\n",
+       "  'nationality',\n",
+       "  'occupation',\n",
+       "  'street_name',\n",
+       "  'street_number',\n",
+       "  'city',\n",
+       "  'postal_code',\n",
+       "  'county',\n",
+       "  'home_phone',\n",
+       "  'mobile_phone',\n",
+       "  'alternative_phone',\n",
+       "  'email',\n",
+       "  'insurance',\n",
+       "  'insurance_comment',\n",
+       "  'amka',\n",
+       "  'spouse_name',\n",
+       "  'spouse_date_of_birth',\n",
+       "  'spouse_occupation',\n",
+       "  'is_active']}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "schema"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Convert dictionary to a DataFrame\n",
@@ -210,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -245,18 +302,30 @@
      "text": [
       "Here is a list of your customers aged between 20 and 22:\n",
       "\n",
-      "1. ΕΜΜΑΝΟΥΕΛΑ ΒΕΚΡΗ, Date of Birth: 2003-02-07, Contact: 6982154636, Email: emmanouela.vekri@gmail.com\n",
-      "2. ΜΙΧΑ ΕΥΑ, Date of Birth: 2002-09-09, Contact: 6906481700, Email: evamicha2002@hotmail.gr\n",
-      "3. ΣΟΦΙΑ ΠΑΠΑΝΙΚΟΛΑΟΥ, Date of Birth: 2004-10-20, Contact: 6955150077, Email: siakkakl@gmail.com\n",
-      "4. ΑΝΔΡΟΜΑΧΗ ΠΕΤΡΟΥ, Date of Birth: 2004-05-08, Contact: 6988292027, Email: machi.pet2004@gmail.com\n",
-      "5. Chiara Trettow, Date of Birth: 2003-02-02, Contact: 6908220187, Email: chiaratreptow@gmail.com\n",
-      "6. ΑΝΑΣΤΑΣΙΑ ΑΓΙΩΤΗ, Date of Birth: 2002-11-08, Contact: 6937449368, Email: agiotianastasia@gmail.com\n",
-      "7. ΕΙΡΗΝΗ ΛΕΜΕ, Date of Birth: 2002-03-04, Contact: 6948792231, Email: lemeirini@gmail.com\n",
-      "8. ΔΕΣΠΟΙΝΑ ΒΛΑΧΟΥ, Date of Birth: 2003-05-07, Contact: 6971729980, Email: despina03@icloud.com\n",
-      "9. ΣΟΝΙΑ ΝΤΟΣΤΗ, Date of Birth: 2004-05-04, Contact: 6948637686, Email: soniantosti2@gmail.com\n",
-      "10. ΒΑΣΙΛΙΚΗ ΣΥΝΝΕΦΑΚΗ, Date of Birth: 2004-09-04, Contact: 6972145080, Email: vickysynnefaki@gmail.com\n",
-      "\n",
-      "Please note that this is a partial list and there are more customers in this age range.\n"
+      "1. ΕΜΜΑΝΟΥΕΛΑ ΒΕΚΡΗ\n",
+      "2. ΜΙΧΑ ΕΥΑ\n",
+      "3. ΠΑΠΑΝΙΚΟΛΑΟΥ ΣΟΦΙΑ\n",
+      "4. ΑΝΔΡΟΜΑΧΗ ΠΕΤΡΟΥ\n",
+      "5. Chiara Trettow\n",
+      "6. ΑΓΙΩΤΗ ΑΝΑΣΤΑΣΙΑ\n",
+      "7. ΛΕΜΕ ΕΙΡΗΝΗ\n",
+      "8. ΒΛΑΧΟΥ ΔΕΣΠΟΙΝΑ\n",
+      "9. ΝΤΟΣΤΗ ΣΟΝΙΑ\n",
+      "10. ΣΥΝΝΕΦΑΚΗ ΒΑΣΙΛΙΚΗ\n",
+      "11. ΚΑΝΔΑΡΑΚΗ ΦΛΩΡΑ\n",
+      "12. ΚΟΚΚΙΝΑΚΗ ΜΑΡΙΑ\n",
+      "13. ΣΙΩΜΟΥ ΚΩΝΣΤΑΝΤΙΝΑ\n",
+      "14. ΜΕΛΙΝΑ ΠΑΝΤΑΖΟΠΟΥΛΟΥ\n",
+      "15. ΜΑΡΙΑ ΝΟΥΣΗ\n",
+      "16. ΕΡΡΙΚΑ ΝΟΥΣΗ\n",
+      "17. ΜΕΛΙΝΑ ΚΡΕΤΣΟΥ\n",
+      "18. ΕΥΑΓΓΕΛΙΑ ΠΩΓΩΝΙΔΟΥ\n",
+      "19. ΠΗΓΗ ΔΗΛΕ\n",
+      "20. ΒΑΣΙΛΕΙΑ ΤΖΕΛΕΠΗ\n",
+      "21. ΕΥΓΕΝΙΑ ΚΑΣΑΠΗ\n",
+      "22. ΒΑΣΙΛΕΙΑ ΤΖΕΛΕΠΗ\n",
+      "23. ΜΑΡΘΑ ΤΣΟΠΑΝΟΓΛΟΥ\n",
+      "24. ΜΑΡΘΑ ΤΣΟΠΑΝΟΓΛΟΥ\n"
      ]
     }
    ],
@@ -270,19 +339,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "πόσους ασθενείς έχω;\n",
-      "Έχετε 1388 ασθενείς.\n",
-      "και πόσοι απο τους ασθενείς μου ειναι 20-30 χρόνων\n",
-      "Από τους ασθενείς σας, 194 είναι ηλικίας 20-30 ετών.\n",
-      "exit\n",
-      "Exiting the question-answer loop.\n"
+      "Πόσο χρονών είναι η Φανή Βασιλειάδου\n",
+      "Η Φανή Βασιλειάδου είναι 79 ετών.\n",
+      "και πόσα παιδιά έχει η ασθενής αυτή;\n"
+     ]
+    },
+    {
+     "ename": "OperationalError",
+     "evalue": "near \"Sorry\": syntax error",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[11], line 17\u001b[0m\n\u001b[0;32m     14\u001b[0m         \u001b[38;5;28mprint\u001b[39m(response)  \u001b[38;5;66;03m# Print the response for the current query\u001b[39;00m\n\u001b[0;32m     16\u001b[0m \u001b[38;5;66;03m# Call the function to start the loop\u001b[39;00m\n\u001b[1;32m---> 17\u001b[0m \u001b[43mask_questions\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[11], line 13\u001b[0m, in \u001b[0;36mask_questions\u001b[1;34m()\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;66;03m# Process the query using your pipeline\u001b[39;00m\n\u001b[1;32m---> 13\u001b[0m response \u001b[38;5;241m=\u001b[39m \u001b[43mrag_pipeline\u001b[49m\u001b[43m(\u001b[49m\u001b[43muser_query\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdb_path\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mdata.sqlite\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mapi_key\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mapi_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28mprint\u001b[39m(response)\n",
+      "Cell \u001b[1;32mIn[8], line 11\u001b[0m, in \u001b[0;36mrag_pipeline\u001b[1;34m(user_query, db_path, api_key)\u001b[0m\n\u001b[0;32m      7\u001b[0m sql_query \u001b[38;5;241m=\u001b[39m generate_sql_query(user_query, schema, api_key)\n\u001b[0;32m      8\u001b[0m \u001b[38;5;66;03m# print(f\"Generated SQL Query: {sql_query}\")  # Optional: to visualize the generated SQL\u001b[39;00m\n\u001b[0;32m      9\u001b[0m \n\u001b[0;32m     10\u001b[0m \u001b[38;5;66;03m# Step 3: Execute the SQL query and retrieve data from the database\u001b[39;00m\n\u001b[1;32m---> 11\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[43mexecute_sql_query\u001b[49m\u001b[43m(\u001b[49m\u001b[43msql_query\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdb_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;66;03m# print(f\"Retrieved Data: {result}\")  # Optional: to visualize the retrieved\u001b[39;00m\n\u001b[0;32m     13\u001b[0m \n\u001b[0;32m     14\u001b[0m \u001b[38;5;66;03m# Step 4: Synthesize the final response using GPT-4\u001b[39;00m\n\u001b[0;32m     15\u001b[0m final_response \u001b[38;5;241m=\u001b[39m synthesize_response(user_query, result, api_key)\n",
+      "Cell \u001b[1;32mIn[6], line 5\u001b[0m, in \u001b[0;36mexecute_sql_query\u001b[1;34m(sql_query, db_path)\u001b[0m\n\u001b[0;32m      2\u001b[0m conn \u001b[38;5;241m=\u001b[39m sqlite3\u001b[38;5;241m.\u001b[39mconnect(db_path)\n\u001b[0;32m      3\u001b[0m cursor \u001b[38;5;241m=\u001b[39m conn\u001b[38;5;241m.\u001b[39mcursor()\n\u001b[1;32m----> 5\u001b[0m \u001b[43mcursor\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[43msql_query\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      6\u001b[0m result \u001b[38;5;241m=\u001b[39m cursor\u001b[38;5;241m.\u001b[39mfetchall()\n\u001b[0;32m      8\u001b[0m conn\u001b[38;5;241m.\u001b[39mclose()\n",
+      "\u001b[1;31mOperationalError\u001b[0m: near \"Sorry\": syntax error"
      ]
     }
    ],
@@ -305,6 +385,13 @@
     "# Call the function to start the loop\n",
     "ask_questions()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
