update mig scripts

--- a/migration_scripts/execute_mig_scripts.ipynb
+++ b/migration_scripts/execute_mig_scripts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,16 +26,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def insert_records(db_path: str, table_name: str) -> None:\n",
+    "def insert_records(table:str, db_path: str) -> None:\n",
+    "    \"\"\"\n",
+    "    Insert records into a table in a SQLite database\n",
+    "    \"\"\"\n",
     "\n",
     "    current_dir = os.getcwd()\n",
     "    parent_dir = os.path.dirname(current_dir)\n",
     "    assets_dir = os.path.join(parent_dir, '_assets')\n",
-    "    sql_filename = f'{table_name}.sql'\n",
+    "    sql_filename = f'{table}.sql'\n",
     "    sql_path = os.path.join(assets_dir, sql_filename)\n",
     "\n",
     "    # Establish a connection to the database\n",
@@ -64,6 +67,18 @@
     "\n",
     "    for row in rows:\n",
     "        print(row)\n",
+    "\n",
+    "    # Don't forget to close the connection\n",
+    "    conn.close()\n",
+    "\n",
+    "def delete_records(table:str, db_path: str) -> None:\n",
+    "    # Establish a connection to the database\n",
+    "    conn = sqlite3.connect(db_path)\n",
+    "    cursor = conn.cursor()\n",
+    "\n",
+    "    # For example, to execute a query\n",
+    "    cursor.execute(f\"delete from {table}\")\n",
+    "    conn.commit()\n",
     "\n",
     "    # Don't forget to close the connection\n",
     "    conn.close()"
