--- a/migration_scripts/execute_mig_scripts.ipynb
+++ b/migration_scripts/execute_mig_scripts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,11 +86,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 3, 2, 2, None, '2013-10-24 23:51:03', None, None, None, None, None, None, None, None, None, None, None, None, None, 'some notes for the patient', None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, 1)\n"
+     ]
+    }
+   ],
    "source": [
-    "fetch_records(table='users', db_path=db_path)"
+    "fetch_records(table='history_medical', db_path=db_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('alembic_version',), ('users',), ('patients',), ('history_medical',)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "conn = sqlite3.connect(db_path)\n",
+    "cursor = conn.cursor()\n",
+    "\n",
+    "#get all avaialble tables\n",
+    "cursor.execute(\"SELECT name FROM sqlite_master WHERE type='table';\")\n",
+    "tables = cursor.fetchall()\n",
+    "print(tables)"
    ]
   },
   {
