--- a/migration_scripts/execute_mig_scripts.ipynb
+++ b/migration_scripts/execute_mig_scripts.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
     "\n",
     "    # Create a cursor object using the cursor method\n",
     "    cursor = conn.cursor()\n",
-    "    with open(sql_path, 'r') as f:\n",
+    "    with open(sql_path, 'r', encoding = 'utf-8') as f:\n",
     "        sql = f.read()  \n",
     "\n",
     "    # For example, to execute a query\n",
@@ -56,13 +56,13 @@
     "    # Don't forget to close the connection\n",
     "    conn.close()\n",
     "\n",
-    "def fetch_records(table:str, db_path: str) -> None:\n",
+    "def fetch_records(table:str, db_path: str, limit: int = 5) -> None:\n",
     "    # Establish a connection to the database\n",
     "    conn = sqlite3.connect(db_path)\n",
     "    cursor = conn.cursor()\n",
     "\n",
     "    # For example, to execute a query\n",
-    "    cursor.execute(f\"select * from {table} limit 5\")\n",
+    "    cursor.execute(f\"select * from {table} limit {limit}\")\n",
     "    rows = cursor.fetchall()\n",
     "\n",
     "    for row in rows:\n",
@@ -88,32 +88,34 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1, 3, 2, 2, None, '2013-10-24 23:51:03', None, None, None, None, None, None, None, None, None, None, None, None, None, 'some notes for the patient', None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, 1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "fetch_records(table='history_medical', db_path=db_path)"
+    "delete_records(table='patients', db_path=db_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[('alembic_version',), ('users',), ('patients',), ('history_medical',)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "insert_records(table='patients', db_path=db_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fetch_records(table='patients', db_path=db_path, limit=50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "conn = sqlite3.connect(db_path)\n",
     "cursor = conn.cursor()\n",
@@ -134,7 +136,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fetusappenv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
