--- a/migration_scripts/create_mig_scripts.ipynb
+++ b/migration_scripts/create_mig_scripts.ipynb
@@ -78,29 +78,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INSERT INTO patients (id, first_name, last_name, father_name, date_of_birth, marital_status, nationality, occupation, street_name, street_number, city, postal_code, county, home_phone, mobile_phone, alternative_phone, email, insurance, insurance_comment, amka, spouse_name, spouse_date_of_birth, spouse_occupation, created_on, created_by, last_updated_on, last_updated_by, is_active)\n",
-      "VALUES\n",
-      "(3, 'Φανή', 'Βασιλειάδου', 'Σπυρίδωνας', '1945-03-04', 'single', 'Ελληνική', 'Συνταξιούχος ΟΤΕ', 'Λέσβου', '112', 'Αθήνα', '17237', 'Αττικής', '2109731000', '6977221781', '2299073763', 'zdetor54@gmail.com', 'other', 'Axxa Ασφαλιστική', '13745541', 'Γεώργιος Δετοράκης', '1940-08-08', 'Συνταξιούχος ΟΤΕ', null, 2, '2022-12-19 22:01:12', 2, 0),\n",
-      "(11, 'Μαρία', 'Παναγοπούλου', 'Κώστας', null, null, null, null, null, '0', null, '0', null, null, null, null, null, null, null, null, null, null, null, null, 2, '2013-09-22 02:35:13', 2, 0),\n",
-      "(41, 'Μαρία', 'Κωνσταντινίδου', null, null, null, null, null, null, null, null, '0', null, null, null, null, null, null, null, null, null, null, null, '2013-09-10 22:15:33', 2, '2013-09-10 22:15:34', 2, 1),\n",
-      "(48, 'Μαρία', 'Ρεπούση', null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, '2013-09-15 15:18:53', 2, '2013-09-15 22:02:56', 2, 1),\n",
-      "(54, 'Μαρία', 'Κοσμίδη', null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, 2, '2013-10-24 23:51:03', 2, 1);\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def main(source_tablename: str, target_tablename: str, data_index: int) -> Tuple[Dict[str, Any], List[Dict[str, str]]]:\n",
     "    current_dir = os.getcwd()\n",
     "    parent_dir = os.path.dirname(current_dir)\n",
     "    assets_dir = os.path.join(parent_dir, '_assets')\n",
-    "    data_filename = 'detoraki_fetusdata_lite.json'\n",
+    "    data_filename = 'detoraki_fetusdata.json'\n",
     "    mapping_filename = 'column_mapping.json'\n",
     "    \n",
     "    json_file = os.path.join(assets_dir, data_filename)\n",
@@ -136,7 +122,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fetusappenv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
