--- a/migration_scripts/execute_mig_scripts.ipynb
+++ b/migration_scripts/execute_mig_scripts.ipynb
@@ -136,7 +136,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "fetusappenv",
    "language": "python",
    "name": "python3"
   },
