--- a/migration_scripts/e2e_migration_playbook.ipynb
+++ b/migration_scripts/e2e_migration_playbook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
     "from typing import List, Dict, Any, Tuple\n",
     "\n",
     "from formating import format_date, format_value, escape_string\n",
-    "from crud import insert_records, delete_records, fetch_records"
+    "from crud import insert_records, delete_records, fetch_records, get_tables"
    ]
   },
   {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,17 +131,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['96', '245', '507', '513', '521', '758', '814', '1277', '1417']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "patient_data = json_data[data_index]['data']\n",
     "null_lastname_ids = [item['s_org_extID'] for item in patient_data if item['lastName'] == \"\"]\n",
@@ -173,21 +165,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(3, 2, 2, None, '2022-12-19 22:01:12', 'Φανή', 'Βασιλειάδου', 'Σπυρίδωνας', '1945-03-04', 'single', 'Ελληνική', 'Συνταξιούχος ΟΤΕ', 'Λέσβου', '112', 'Αθήνα', '17237', 'Αττικής', '2109731000', '6977221781', '2299073763', 'zdetor54@gmail.com', 'other', 'Axxa Ασφαλιστική', '13745541', 'Γεώργιος Δετοράκης', '1940-08-08', 'Συνταξιούχος ΟΤΕ', 0)\n",
-      "(11, 2, 2, None, '2013-09-22 02:35:13', 'Μαρία', 'Παναγοπούλου', 'Κώστας', None, None, None, None, None, '0', None, '0', None, None, None, None, None, None, None, None, None, None, None, 0)\n",
-      "(41, 2, 2, '2013-09-10 22:15:33', '2013-09-10 22:15:34', 'Μαρία', 'Κωνσταντινίδου', None, None, None, None, None, None, None, None, '0', None, None, None, None, None, None, None, None, None, None, None, 1)\n",
-      "(48, 2, 2, '2013-09-15 15:18:53', '2013-09-15 22:02:56', 'Μαρία', 'Ρεπούση', None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, 1)\n",
-      "(54, 2, 2, None, '2013-10-24 23:51:03', 'Μαρία', 'Κοσμίδη', None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, 1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "fetch_records(target_tablename, db_path)"
    ]
@@ -204,7 +184,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "get_tables(db_path)"
+   ]
   },
   {
    "cell_type": "code",
