added a section to create the admin user in the migration runbook

--- a/migration_scripts/e2e_migration_playbook.ipynb
+++ b/migration_scripts/e2e_migration_playbook.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import json\n",
     "\n",
-    "from typing import List, Dict, Any, Tuple\n",
+    "from typing import List, Dict, Any, Tuple, Optional\n",
     "\n",
     "from formating import format_date, format_value, escape_string\n",
     "from crud import insert_records, delete_records, fetch_records, get_tables"
@@ -17,11 +17,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def convert_json_to_sql(json_data: Dict[str, Any], column_mapping: List[Dict[str, str]], target_tablename:str) -> str:\n",
+    "def convert_json_to_insert_sql(json_data: Dict[str, Any], column_mapping: List[Dict[str, str]], target_tablename:str) -> str:\n",
     "    \"\"\"Convert JSON data to SQL insert statement with multiple VALUES.\"\"\"\n",
     "    \n",
     "    # Get column names\n",
@@ -47,12 +47,43 @@
     "    values_sql = ',\\n'.join(all_values)\n",
     "    sql_statement = f\"INSERT INTO {target_tablename} ({columns_sql})\\nVALUES\\n{values_sql};\"\n",
     "    \n",
-    "    return sql_statement"
+    "    return sql_statement\n",
+    "\n",
+    "def convert_json_to_update_sql(json_data: Dict[str, Any], column_mapping: List[Dict[str, str]], target_tablename: str, source_id: Optional[str] = None, target_id: Optional[str] = None) -> str:\n",
+    "    \"\"\"Convert JSON data to SQL update statements.\"\"\"\n",
+    "    \n",
+    "    update_statements = []\n",
+    "    for record in json_data:\n",
+    "        # Build SET clause\n",
+    "        set_values = []\n",
+    "        for mapping in column_mapping:\n",
+    "            source_field = mapping['source']\n",
+    "            target_field = mapping['target']\n",
+    "            value_type = mapping['type']\n",
+    "            \n",
+    "            try:\n",
+    "                value = mapping['default']\n",
+    "            except KeyError:\n",
+    "                value = record.get(source_field)\n",
+    "                \n",
+    "            formatted_value = format_value(value, value_type)\n",
+    "            set_values.append(f\"{target_field} = {formatted_value}\")\n",
+    "        \n",
+    "        # Create UPDATE statement for each record\n",
+    "        set_clause = ',\\n    '.join(set_values)\n",
+    "        update_sql = f\"\"\"UPDATE {target_tablename}\n",
+    "                            SET\n",
+    "                                {set_clause}\n",
+    "                            WHERE id = {record[f'{source_id}']};\"\"\"\n",
+    "        update_statements.append(update_sql)\n",
+    "    \n",
+    "    # Join all UPDATE statements\n",
+    "    return '\\n\\n'.join(update_statements)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,6 +138,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Setup admin in Users\n",
+    "\n",
+    "The script should already be there in _assets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_tablename = 'users'\n",
+    "insert_records(target_tablename, db_path)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fetch_records(target_tablename, db_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# delete_records(target_tablename, db_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Admin user created\n",
+    "--------------------------\n",
     "### Migrate Patients\n",
     "\n",
     "Generate the sql output and save it"
@@ -114,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +192,7 @@
     "target_tablename = 'patients'\n",
     "data_index = 3\n",
     "\n",
-    "sql_output = convert_json_to_sql(json_data[data_index]['data'], column_mapping[source_tablename], target_tablename = target_tablename)\n",
+    "sql_output = convert_json_to_insert_sql(json_data[data_index]['data'], column_mapping[source_tablename], target_tablename = target_tablename)\n",
     "# print(sql_output)\n",
     "output_file = os.path.join(assets_dir, f'{target_tablename}.sql')\n",
     "with open(output_file, 'w', encoding='utf-8') as f:\n",
@@ -176,7 +246,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Patients migrated"
+    "### Patients migrated\n",
+    "---------------------\n",
+    "### Migrate MedicalHistory"
    ]
   },
   {
@@ -187,6 +259,41 @@
    "source": [
     "get_tables(db_path)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
