updates to the migration

--- a/migration_scripts/e2e_migration_playbook.ipynb
+++ b/migration_scripts/e2e_migration_playbook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,9 +246,84 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Patients migrated\n",
-    "---------------------\n",
+    "---------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Migrate MedicalHistory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "source_tablename = 'tblmedhistory'\n",
+    "target_tablename = 'history_medical'\n",
+    "data_index = 10\n",
+    "\n",
+    "sql_output = convert_json_to_insert_sql(json_data[data_index]['data'], column_mapping[source_tablename], target_tablename = target_tablename)\n",
+    "# print(sql_output)\n",
+    "output_file = os.path.join(assets_dir, f'{target_tablename}.sql')\n",
+    "with open(output_file, 'w', encoding='utf-8') as f:\n",
+    "    f.write(sql_output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "insert_records(target_tablename, db_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# delete_records(target_tablename, db_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 3, 1, 1, '2013-08-26 00:00:00', '2022-12-19 21:51:42', 'Έχει κάνει για τα κρεατάκια', 'Ναι', 'Ναι', 'Καταναλώνει ένα ποτηράκι κρασί την ημέρα', 0, 'Δεν έχει παρατηρηθεί καμία αντίδραση', 1, 'Στην ασπιρίνη', 'Στην στριχνίνη', 'Υπάρχει κάτι αλλά δεν θέλει να πει τι.', 53, 1.63, 19.948, 'Hi Sveta,\\n\\nWorking-wise everything is great. I still enjoy working for Close, both in terms of the projects I am involved with as well as the role. Unfortunately I have not registered for the CFA exam in July (may try next December instead). I am splitting my time between London and Athens (currently going back every second weekend) cause my mum’s condition has deteriorated rapidly so I can’t commit to studying over the weekends as much as I would like.\\n\\nBut Carl has sent out an invite and has started a working group for BAs and Big Data so I can at least hit one of my objectives for this semester. Wasn’t able to join his first meeting on Monday (09/11) because I was still in Athens but I will do my best to join the next ones.\\n\\nWe can always have a catch-up over the phone or I can meet you near Blackfriars station on your way back one day.\\n\\nKind Regards,\\n\\nZac\\n\\n', None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, 1)\n",
+      "(8, 39, 1, 1, '2013-09-15 17:38:19', '2013-09-15 17:38:19', 'Μόνο κάτι ψιλοπλαστικές επεμβάσεις αλλά μάλλον με ενέσιμα', 'Ναι είναι καπνίστρια', 'Δεν είναι ακόμη έγκυος', 'Lol. Το έχει κόψει μετά το έβδομο rehab', 0, 'Δεν κάνει τέτοια', 1, 'adderall', 'Είναι αλλεργική στο blueberries', 'Είναι όλοι αλκοολικοί και ναρκομανείς. Το καημένο το κοριτσάκι.', 52, 1.65, 19.1, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, 1)\n",
+      "(11, 59, 1, 1, '2013-12-02 16:35:42', '2014-02-04 14:37:34', 'ΚΑΜΙΑ', 'ΟΧΙ', 'ΟΧΙ', 'ΟΧΙ', 0, None, 0, None, None, 'ΕΛΕΥΘΕΡΟ', 58, 1.64, 21.565, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, 1)\n",
+      "(12, 60, 1, 1, '2013-12-05 18:16:19', '2013-12-05 18:16:19', None, None, None, None, 0, None, 0, None, None, None, 0, 0, 0, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, 1)\n",
+      "(13, 64, 1, 1, '2014-02-18 13:57:12', '2014-02-24 18:13:12', 'Σκωληκοειδεκτομή', None, None, None, 0, None, 0, None, None, None, 0, 0, 0, 'Ελεύθερο ΑΑ. Δεν λαμβάνει φάρμακα. Σε U/S εγο προ έτους ανευρέθησαν δύο ινομυώματα 3,5 και 1,9 εκ. Ωοθήκες: κφ, Δουγλάσειος: ελεύθερος\\n\\nSOS: γνωστή ινοκυστική μαστοπάθεια. ΠΡΟΣΟΧΗ στην εκτίμηση των μαστογραφιών. Ίσως επιπρόσθετα να στέλνω και υπέρηχο στον Δημητρόπουλο και φυσικά ψηλάφηση.', None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "fetch_records(target_tablename, db_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Migrate Pathology data"
    ]
   },
   {
@@ -256,6 +331,47 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "fetch_records(target_tablename, db_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('alembic_version',)\n",
+      "('users',)\n",
+      "('patients',)\n",
+      "('history_medical',)\n"
+     ]
+    }
+   ],
    "source": [
     "get_tables(db_path)"
    ]
