finalised medical history migration

--- a/migration_scripts/e2e_migration_playbook.ipynb
+++ b/migration_scripts/e2e_migration_playbook.ipynb
@@ -11,79 +11,13 @@
     "\n",
     "from typing import List, Dict, Any, Tuple, Optional\n",
     "\n",
-    "from formating import format_date, format_value, escape_string\n",
+    "from formating import convert_json_to_insert_sql, convert_json_to_update_sql\n",
     "from crud import insert_records, delete_records, fetch_records, get_tables"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def convert_json_to_insert_sql(json_data: Dict[str, Any], column_mapping: List[Dict[str, str]], target_tablename:str) -> str:\n",
-    "    \"\"\"Convert JSON data to SQL insert statement with multiple VALUES.\"\"\"\n",
-    "    \n",
-    "    # Get column names\n",
-    "    columns = [mapping['target'] for mapping in column_mapping]\n",
-    "    columns_sql = ', '.join(columns)\n",
-    "    \n",
-    "    # Collect all value sets\n",
-    "    all_values = []\n",
-    "    for record in json_data:\n",
-    "        values = []\n",
-    "        for mapping in column_mapping:\n",
-    "            source_field = mapping['source']\n",
-    "            value_type = mapping['type']\n",
-    "            try:\n",
-    "                value = mapping['default']\n",
-    "            except KeyError:\n",
-    "                value = record.get(source_field)    \n",
-    "            formatted_value = format_value(value, value_type)\n",
-    "            values.append(formatted_value)\n",
-    "        all_values.append(f\"({', '.join(str(value) for value in values)})\")\n",
-    "    \n",
-    "    # Create single INSERT statement with multiple VALUES\n",
-    "    values_sql = ',\\n'.join(all_values)\n",
-    "    sql_statement = f\"INSERT INTO {target_tablename} ({columns_sql})\\nVALUES\\n{values_sql};\"\n",
-    "    \n",
-    "    return sql_statement\n",
-    "\n",
-    "def convert_json_to_update_sql(json_data: Dict[str, Any], column_mapping: List[Dict[str, str]], target_tablename: str, source_id: Optional[str] = None, target_id: Optional[str] = None) -> str:\n",
-    "    \"\"\"Convert JSON data to SQL update statements.\"\"\"\n",
-    "    \n",
-    "    update_statements = []\n",
-    "    for record in json_data:\n",
-    "        # Build SET clause\n",
-    "        set_values = []\n",
-    "        for mapping in column_mapping:\n",
-    "            source_field = mapping['source']\n",
-    "            target_field = mapping['target']\n",
-    "            value_type = mapping['type']\n",
-    "            \n",
-    "            try:\n",
-    "                value = mapping['default']\n",
-    "            except KeyError:\n",
-    "                value = record.get(source_field)\n",
-    "                \n",
-    "            formatted_value = format_value(value, value_type)\n",
-    "            set_values.append(f\"{target_field} = {formatted_value}\")\n",
-    "        \n",
-    "        # Create UPDATE statement for each record\n",
-    "        set_clause = ',\\n    '.join(set_values)\n",
-    "        update_sql = f\"\"\"UPDATE {target_tablename}\n",
-    "                            SET\n",
-    "                                {set_clause}\n",
-    "                            WHERE id = {record[f'{source_id}']};\"\"\"\n",
-    "        update_statements.append(update_sql)\n",
-    "    \n",
-    "    # Join all UPDATE statements\n",
-    "    return '\\n\\n'.join(update_statements)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,76 +290,43 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "---------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Migrate Pathologies (UPDATE)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sqlite3\n",
+    "source_tablename = 'tblpathologies'\n",
+    "target_tablename = 'history_medical'\n",
+    "data_index = 13\n",
     "\n",
-    "def fetch_records(table:str, db_path: str, limit: int = 5) -> None:\n",
-    "    # Establish a connection to the database\n",
-    "    conn = sqlite3.connect(db_path)\n",
-    "    cursor = conn.cursor()\n",
-    "\n",
-    "    # For example, to execute a query\n",
-    "    cursor.execute(f\"select * from {table} limit {limit}\")\n",
-    "    rows = cursor.fetchall()\n",
-    "\n",
-    "    for row in rows:\n",
-    "        print(row)\n",
-    "\n",
-    "    # Don't forget to close the connection\n",
-    "    conn.close()"
+    "sql_output = convert_json_to_update_sql(json_data[data_index]['data'], column_mapping[source_tablename], target_tablename = target_tablename, source_id = 'MedHistoryID', target_id = 'id')\n",
+    "# print(sql_output)\n",
+    "output_file = os.path.join(assets_dir, f'{target_tablename}.sql')\n",
+    "with open(output_file, 'w', encoding='utf-8') as f:\n",
+    "    f.write(sql_output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "insert_records(target_tablename, db_path)"
    ]
   },
   {
@@ -438,11 +339,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "----------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "... to be continued"
+   ]
   },
   {
    "cell_type": "code",
@@ -454,18 +362,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "--------------"
+   ]
   },
   {
    "cell_type": "code",
