some rag updates

--- a/bluehost_connection.ipynb
+++ b/bluehost_connection.ipynb
@@ -318,7 +318,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fetusappenv",
+   "display_name": "fetusappenv (3.12.4)",
    "language": "python",
    "name": "python3"
   },
