--- a/fetusapp/rag.ipynb
+++ b/fetusapp/rag.ipynb
@@ -403,7 +403,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fetusappenv",
+   "display_name": "fetusappenv (3.12.4)",
    "language": "python",
    "name": "python3"
   },
