--- a/fetusapp/rag_php_db.ipynb
+++ b/fetusapp/rag_php_db.ipynb
@@ -391,7 +391,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fetusappenv",
+   "display_name": "fetusappenv (3.12.4)",
    "language": "python",
    "name": "python3"
   },
