--- a/migration_scripts/e2e_migration_playbook.ipynb
+++ b/migration_scripts/e2e_migration_playbook.ipynb
@@ -399,7 +399,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fetusappenv",
+   "display_name": "fetusappenv (3.12.4)",
    "language": "python",
    "name": "python3"
   },
