--- a/migration_scripts/e2e_migration_playbook.ipynb
+++ b/migration_scripts/e2e_migration_playbook.ipynb
@@ -354,13 +354,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "source_tablename = 'tblobstetrichistory'\n",
     "target_tablename = 'history_obstetrics'\n",
-    "data_index = 11\n",
+    "data_index = 11 # this is the index in the json_data list where the relevant data is stored\n",
     "\n",
     "sql_output = convert_json_to_insert_sql(json_data[data_index]['data'], column_mapping[source_tablename], target_tablename = target_tablename)\n",
     "# print(sql_output)\n",
@@ -1094,14 +1094,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## tblobstetrichistory_x NOT TO BE MIGRATED"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "... to be continued"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('alembic_version',)\n",
+      "('users',)\n",
+      "('patients',)\n",
+      "('history_medical',)\n",
+      "('history_obstetrics',)\n"
+     ]
+    }
+   ],
    "source": [
     "get_tables(db_path)"
    ]
