--- a/migration_scripts/e2e_migration_playbook.ipynb
+++ b/migration_scripts/e2e_migration_playbook.ipynb
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,18 +380,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Executing statement: INSERT INTO history_obstetrics (id, patient_id, ft, kt, embrioulkia, te, ae, created_on, created_by, last_updated_on, la...\n",
+      "Successfully executed 1 statements\n"
+     ]
+    }
+   ],
    "source": [
     "insert_records(target_tablename, db_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 3, 1, 1, None, '2013-11-21 18:05:33', 1, 2, None, None, None, None)\n",
+      "(5, 66, 1, 1, '2014-02-27 01:50:24', '2014-02-27 01:50:39', 1, 2, None, None, 3, None)\n",
+      "(6, 85, 1, 1, '2014-05-05 14:51:40', '2014-05-05 14:51:40', 1, 3, None, None, None, None)\n",
+      "(7, 90, 1, 1, '2014-06-16 14:24:00', '2014-06-16 14:24:00', 1, None, None, None, None, None)\n",
+      "(8, 92, 1, 1, '2014-06-16 16:56:40', '2014-06-16 16:56:40', 1, 2, None, None, None, 1)\n"
+     ]
+    }
+   ],
    "source": [
     "fetch_records(target_tablename, db_path)"
    ]
@@ -400,7 +421,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## tblobstetrichistory_x NOT TO BE MIGRATED"
+    "### tblobstetrichistory_x NOT TO BE MIGRATED"
    ]
   },
   {
@@ -412,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,18 +450,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "delete_records(target_tablename, db_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Executing statement: INSERT INTO pregnancy_history (id, patient_id, ter, alcohol, smoking, amniocentesis, medication, other, diabetes, hypert...\n",
+      "Successfully executed 1 statements\n"
+     ]
+    }
+   ],
    "source": [
     "insert_records(target_tablename, db_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 3, 1, 1, '2013-11-09 00:00:00', '2013-12-01 21:25:31', '1979-08-06', 'Όχι nai', 'Όχι', 'Ναι', 'Λίγα και καλά vgs', 'τι άλλα', 'όχι', 'λίγο', 'τίποτα', 'λιγουλακι', 'του μωρού?', 'αρνητικό', 'τι είναι αυτό', 'και τούτο δεν το ξέρω', 'καλή φαίνεται', 'ναι', 'όχι', 'όχι', 'όχι', 'όχι', 'όχι', 'όχι', 'αρκετά', 'όχι', 'όχι', 'όχι', 'όχι', 1)\n",
+      "(4, 3, 1, 1, '2013-11-26 00:00:00', '2013-11-30 23:05:01', '1976-11-18', 'Δεν πίνει', 'Δεν καπνίζει', 'σταυροβελονιά', 'σε λίγο θα τα αρχίσει', 'τι άλλα να πούμε', 'και χάρακα', 'υπερένταση θα την έλεγα', 'ντόινγκ', 'όχι ευτυχώς, τίποτα το πουλάκι μου', 'μηδέν', 'αρνητικό', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', 1)\n",
+      "(5, 3, 1, 1, None, '2014-02-22 17:32:38', '2013-08-16', None, None, None, 'ωβψωψωβψωβψωβψνδφ δσφ δσ φδ φ δσφ δσ φδσ φ σδφ δσ φ σδφδσ φ δφ δσφ δσ φ δσ φ δσφ  δσφ σδ φ δσ φ δσ φσδφ δσφ σδ φ σδφ σδ φ δσ φσ δφωβψβψωβψωβψωβψωβψωβ φδ φ φ ', None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, 1)\n",
+      "(9, 3, 1, 1, '2013-12-01 11:49:19', '2013-12-01 11:49:56', None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, 0)\n",
+      "(10, 3, 1, 1, '2013-12-01 13:50:31', '2013-12-01 13:52:48', '2013-10-14', None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, 0)\n"
+     ]
+    }
+   ],
    "source": [
     "fetch_records(target_tablename, db_path)"
    ]
@@ -495,24 +546,32 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "... to be continued"
+    "### ... to be continued"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('alembic_version',)\n",
+      "('users',)\n",
+      "('patients',)\n",
+      "('history_medical',)\n",
+      "('history_obstetrics',)\n",
+      "('history_obstetrics_x',)\n",
+      "('pregnancy_history',)\n",
+      "('pregnancy_history_x',)\n"
+     ]
+    }
+   ],
    "source": [
     "get_tables(db_path)"
    ]
