--- a/migration_scripts/e2e_migration_playbook.ipynb
+++ b/migration_scripts/e2e_migration_playbook.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import json\n",
+    "import sqlite3\n",
     "\n",
     "from typing import List, Dict, Any, Tuple, Optional\n",
     "\n",
@@ -17,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,18 +478,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1, 3, 1, 1, '2013-11-09 00:00:00', '2013-12-01 21:25:31', '1979-08-06', 'Όχι nai', 'Όχι', 'Ναι', 'Λίγα και καλά vgs', 'τι άλλα', 'όχι', 'λίγο', 'τίποτα', 'λιγουλακι', 'του μωρού?', 'αρνητικό', 'τι είναι αυτό', 'και τούτο δεν το ξέρω', 'καλή φαίνεται', 'ναι', 'όχι', 'όχι', 'όχι', 'όχι', 'όχι', 'όχι', 'αρκετά', 'όχι', 'όχι', 'όχι', 'όχι', 1)\n",
-      "(4, 3, 1, 1, '2013-11-26 00:00:00', '2013-11-30 23:05:01', '1976-11-18', 'Δεν πίνει', 'Δεν καπνίζει', 'σταυροβελονιά', 'σε λίγο θα τα αρχίσει', 'τι άλλα να πούμε', 'και χάρακα', 'υπερένταση θα την έλεγα', 'ντόινγκ', 'όχι ευτυχώς, τίποτα το πουλάκι μου', 'μηδέν', 'αρνητικό', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', 1)\n",
-      "(5, 3, 1, 1, None, '2014-02-22 17:32:38', '2013-08-16', None, None, None, 'ωβψωψωβψωβψωβψνδφ δσφ δσ φδ φ δσφ δσ φδσ φ σδφ δσ φ σδφδσ φ δφ δσφ δσ φ δσ φ δσφ  δσφ σδ φ δσ φ δσ φσδφ δσφ σδ φ σδφ σδ φ δσ φσ δφωβψβψωβψωβψωβψωβψωβ φδ φ φ ', None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, 1)\n",
-      "(9, 3, 1, 1, '2013-12-01 11:49:19', '2013-12-01 11:49:56', None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, 0)\n",
-      "(10, 3, 1, 1, '2013-12-01 13:50:31', '2013-12-01 13:52:48', '2013-10-14', None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, 0)\n"
+     "ename": "OperationalError",
+     "evalue": "database is locked",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[27], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mfetch_records\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtarget_tablename\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdb_path\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\Zacharias.Detorakis\\Desktop\\Personal\\PyCharmProjects\\the-fetus\\migration_scripts\\crud.py:96\u001b[0m, in \u001b[0;36mfetch_records\u001b[1;34m(table, db_path, limit)\u001b[0m\n\u001b[0;32m      0\u001b[0m <Error retrieving source code with stack_data see ipython/ipython#13598>\n",
+      "\u001b[1;31mOperationalError\u001b[0m: database is locked"
      ]
     }
    ],
@@ -549,12 +551,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Delete records with null TER"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sqlite3\n",
+    "\n",
+    "conn = sqlite3.connect(db_path)\n",
+    "cursor = conn.cursor()\n",
+    "\n",
+    "cursor.execute(\"\"\"\n",
+    "DELETE FROM pregnancy_history_x\n",
+    "WHERE pregnancy_id IN (SELECT id FROM pregnancy_history WHERE ter IS NULL)\n",
+    "\"\"\")\n",
+    "cursor.execute(\"\"\"\n",
+    "DELETE FROM pregnancy_history\n",
+    "WHERE ter IS NULL\n",
+    "\"\"\")\n",
+    "conn.commit()\n",
+    "\n",
+    "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### ... to be continued"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
