--- a/migration_scripts/e2e_migration_playbook.ipynb
+++ b/migration_scripts/e2e_migration_playbook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,39 +381,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Executing statement: INSERT INTO history_obstetrics (id, patient_id, ft, kt, embrioulkia, te, ae, created_on, created_by, last_updated_on, la...\n",
-      "Successfully executed 1 statements\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "insert_records(target_tablename, db_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1, 3, 1, 1, None, '2013-11-21 18:05:33', 1, 2, None, None, None, None)\n",
-      "(5, 66, 1, 1, '2014-02-27 01:50:24', '2014-02-27 01:50:39', 1, 2, None, None, 3, None)\n",
-      "(6, 85, 1, 1, '2014-05-05 14:51:40', '2014-05-05 14:51:40', 1, 3, None, None, None, None)\n",
-      "(7, 90, 1, 1, '2014-06-16 14:24:00', '2014-06-16 14:24:00', 1, None, None, None, None, None)\n",
-      "(8, 92, 1, 1, '2014-06-16 16:56:40', '2014-06-16 16:56:40', 1, 2, None, None, None, 1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "fetch_records(target_tablename, db_path)"
    ]
@@ -434,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,40 +439,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Executing statement: INSERT INTO pregnancy_history (id, patient_id, ter, alcohol, smoking, amniocentesis, medication, other, diabetes, hypert...\n",
-      "Successfully executed 1 statements\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "insert_records(target_tablename, db_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "OperationalError",
-     "evalue": "database is locked",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[27], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mfetch_records\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtarget_tablename\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdb_path\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\Zacharias.Detorakis\\Desktop\\Personal\\PyCharmProjects\\the-fetus\\migration_scripts\\crud.py:96\u001b[0m, in \u001b[0;36mfetch_records\u001b[1;34m(table, db_path, limit)\u001b[0m\n\u001b[0;32m      0\u001b[0m <Error retrieving source code with stack_data see ipython/ipython#13598>\n",
-      "\u001b[1;31mOperationalError\u001b[0m: database is locked"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "fetch_records(target_tablename, db_path)"
    ]
@@ -507,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,23 +481,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Executing statement: INSERT INTO pregnancy_history_x (id, pregnancy_id, date_of_visit, cause_of_visit, tokos, pregnancy_age, height, weight_b...\n",
-      "Successfully executed 1 statements\n",
-      "(1, 1, 1, 1, '2013-11-27 00:00:00', '2013-11-27 00:00:00', '2013-11-01', 'Πρώτο Ραντεβού', 1, 'μεγάλη', 1, 2, 3, 4, 'καλή και η προβολή', 'μια χαρά', 'κάνενα πρόβλημα', 'όχι ακόμη', 'δεν καταλαβαίνει', 'τώρα πάλι', 'δεν ξέρω', 36, 12, None, 1)\n",
-      "(2, 4, 1, 1, '2013-11-27 00:00:00', '2014-01-20 02:07:47', '2013-11-01', 'Πρώτο Ραντεβού', 1, 'μεγάλη', 1, 2, 3, 1, 'καλή και η προβολή', 'μια χαρά', 'κάνενα πρόβλημα', 'όχι ακόμη', 'δεν καταλαβαίνει', 'τώρα πάλι', 'δεν ξέρω. Να το κάνω text να το αφήσω ως έχει;', 36, 12, None, 1)\n",
-      "(3, 1, 1, 1, '2013-11-27 00:00:00', '2013-12-02 21:21:26', '1997-01-01', 'Δεύτερο Ραντεβού', 1, 'μεγάλη', 1, 2, 3, 1, 'καλή και η προβολή', 'μια χαρά', 'κάνενα πρόβλημα', 'όχι ακόμη', 'δεν καταλαβαίνει', 'τώρα πάλι', 'δεν ξέρω', 36, 12, None, 1)\n",
-      "(4, 1, 1, 1, '2013-11-27 00:00:00', '2013-11-27 00:00:00', '2013-11-27', 'Τρίτο Ραντεβού', 1, 'μεγάλη', 1, 2, 3, 4, 'καλή και η προβολή', 'μια χαρά', 'κάνενα πρόβλημα', 'όχι ακόμη', 'δεν καταλαβαίνει', 'τώρα πάλι', 'δεν ξέρω', 36, 12, None, 1)\n",
-      "(5, 5, 1, 1, '2013-12-02 00:48:58', '2022-12-19 21:51:15', '2013-11-28', '-', 2, '14+6(wbd)', 1, 4, 10, 6, '-', '-', '-', '-', '-', '-', '-', 6, 1, 'ffgdf', 1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "insert_records(target_tablename, db_path)\n",
     "fetch_records(target_tablename, db_path)\n",
@@ -556,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,29 +525,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ... to be continued"
+    "### Migrate Gyn History X data (INSERT)\n",
+    "\n",
+    "DELETE 5,8 and 10 records"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "source_tablename = 'tblgynhistory'\n",
+    "target_tablename = 'gyn_history'\n",
+    "data_index = 6 # this is the index in the json_data list where the relevant data is stored\n",
+    "\n",
+    "sql_output = convert_json_to_insert_sql(json_data[data_index]['data'], column_mapping[source_tablename], target_tablename = target_tablename)\n",
+    "# print(sql_output)\n",
+    "output_file = os.path.join(assets_dir, f'{target_tablename}.sql')\n",
+    "with open(output_file, 'w', encoding='utf-8') as f:\n",
+    "    f.write(sql_output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('alembic_version',)\n",
-      "('users',)\n",
-      "('patients',)\n",
-      "('history_medical',)\n",
-      "('history_obstetrics',)\n",
-      "('history_obstetrics_x',)\n",
-      "('pregnancy_history',)\n",
-      "('pregnancy_history_x',)\n"
+      "(1, 3, 1, 1, '2014-01-23 02:00:29', '2014-02-21 09:55:54', '2014-01-22', 'Πρώτο Ραντεβού', '2012-02-07', 'Όχι κάτι σοβαρό', 'Τι να λέμε', 36, 12, 5, 'καλή δείχνει', 'μακαρόνια με σάλτσα', 164, 50, 'καλά', 'καθαροί', 'επίπεδη', 'οκ', 'οκ', 'οκ', 'οκ', 'οκ', 'Ok', 1)\n",
+      "(2, 3, 1, 1, '2014-01-23 02:02:47', '2014-01-23 02:03:32', '2014-01-01', 'ναι', '2012-03-08', None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, 0)\n",
+      "(3, 3, 1, 1, '2014-01-23 02:03:38', '2014-01-23 13:35:53', '2014-01-09', 'Να δω το παιδάκι μου', '2014-01-09', 'Mobile', 'Διακοπές το καλοκαίρι', 21, 10, 55, 'σε γνωρίζω από την...', 'και από αυτό δεν πάμε πίσω', 165, 50, None, None, None, None, None, None, None, None, None, 1)\n",
+      "(4, 3, 1, 1, '2014-01-28 21:42:48', '2014-01-28 21:43:21', '2014-01-28', None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, 0)\n",
+      "(6, 64, 1, 1, '2014-02-17 15:41:08', '2014-03-18 18:04:55', '2014-02-17', 'Προληπτικός έλεγχος', '2014-01-23', None, 'Ιστορικό ινομυώματος ', None, None, None, None, None, None, None, 'Ιστορικό ινοκυστικής μαστοπάθειας', None, None, 'κφ', 'μήτρα σε ευθειωρία, χωρίς ευαισθησία στη μετακίνηση του τραχήλου', 'αψηλάφητα', None, 'Σε υπέρηχο μαστών που είχε κάνει στο παρελθόν και μαστογραφία ανευρέθησαν κύστεις στους μαστούς άμφω. Έγινε FNA: κυτταρολογική αρνητική για κακοήθεια.', '1) πήρα τεστ Παπ: αρνητικό για κακοήθεια. Εικόνα φλεγμονής από αιμόφιλο (ΛΗΤΩ). Επειδή ανήκει στη φυσιολογική χλωρίδα του κόλπου (Gardnerella vaginalis), δεν δίνω θεραπεία, εκτός και αν έχει συμπτώματα\\n\\n2) μαστογραφία (Μάρτιος 2014): χωρίς παθολογικά ευρήματα. Πέρυσι είχε κάνει υπέρηχο μαστών λόγω αυξημένης πυκνότητας και είχαν βρεθεί πολύ μικρές κύστεις. Φέτος πάλι μιλάει η μαστογραφία για πυκνούς μαστούς. Όμως της είπα να μην κάνει υπέρηχο. Του χρόνου όμως θα κάνουμε και μαστογραφία και υπερηχογράφημα μαστών. Η ίδια δεν ψηλαφά κάτι', 1)\n"
      ]
     }
    ],
+   "source": [
+    "insert_records(target_tablename, db_path)\n",
+    "fetch_records(target_tablename, db_path)\n",
+    "# delete_records(target_tablename, db_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ... to be continued"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "get_tables(db_path)"
    ]
