added medical exam model

--- a/migration_scripts/e2e_migration_playbook.ipynb
+++ b/migration_scripts/e2e_migration_playbook.ipynb
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -568,6 +568,42 @@
     "insert_records(target_tablename, db_path)\n",
     "fetch_records(target_tablename, db_path)\n",
     "# delete_records(target_tablename, db_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Migrate Medical Exams (INSERT)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'tblmedexam'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[9], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m target_tablename \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmedical_exams\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m      3\u001b[0m data_index \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m8\u001b[39m \u001b[38;5;66;03m# this is the index in the json_data list where the relevant data is stored\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m sql_output \u001b[38;5;241m=\u001b[39m convert_json_to_insert_sql(json_data[data_index][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdata\u001b[39m\u001b[38;5;124m'\u001b[39m], \u001b[43mcolumn_mapping\u001b[49m\u001b[43m[\u001b[49m\u001b[43msource_tablename\u001b[49m\u001b[43m]\u001b[49m, target_tablename \u001b[38;5;241m=\u001b[39m target_tablename)\n\u001b[0;32m      6\u001b[0m \u001b[38;5;66;03m# print(sql_output)\u001b[39;00m\n\u001b[0;32m      7\u001b[0m output_file \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(assets_dir, \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtarget_tablename\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.sql\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'tblmedexam'"
+     ]
+    }
+   ],
+   "source": [
+    "source_tablename = 'tblmedexam'\n",
+    "target_tablename = 'medical_exams'\n",
+    "data_index = 8 # this is the index in the json_data list where the relevant data is stored\n",
+    "\n",
+    "sql_output = convert_json_to_insert_sql(json_data[data_index]['data'], column_mapping[source_tablename], target_tablename = target_tablename)\n",
+    "# print(sql_output)\n",
+    "output_file = os.path.join(assets_dir, f'{target_tablename}.sql')\n",
+    "with open(output_file, 'w', encoding='utf-8') as f:\n",
+    "    f.write(sql_output)"
    ]
   },
   {
